--- a/Views/Cinema/Details.cshtml
+++ b/Views/Cinema/Details.cshtml
@@ -17,6 +17,7 @@
             @Html.DisplayFor(model => model.Nom)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Ville)
         </dt>
@@ -24,6 +25,7 @@
             @Html.DisplayFor(model => model.Ville)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rue)
         </dt>
@@ -31,6 +33,7 @@
             @Html.DisplayFor(model => model.Rue)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Numero)
         </dt>
@@ -38,11 +41,23 @@
             @Html.DisplayFor(model => model.Numero)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Salles)
+            Salles
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Salles)
+            @if (Model.Salles != null && Model.Salles.Any())
+            {
+                <ul>
+                    @foreach (var salle in Model.Salles) 
+                    {
+                        <li>@salle.Id</li>
+                    }
+                </ul>
+            }
+            else {
+                <p>No Salles available.</p>
+            }
         </dd>
     </dl>
 </div>
