--- a/Views/Salle/Edit.cshtml
+++ b/Views/Salle/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CinemaId" class="control-label"></label>
-                <input asp-for="CinemaId" class="form-control" />
+                <select asp-for="CinemaId" class="form-control" asp-items="ViewBag.Cinemas"></select>
                 <span asp-validation-for="CinemaId" class="text-danger"></span>
             </div>
             <div class="form-group">
