Horaire & Film CRUD complete

--- a/Views/Horaire/Details.cshtml
+++ b/Views/Horaire/Details.cshtml
@@ -17,18 +17,12 @@
             @Html.DisplayFor(model => model.HeureDebut)
         </dd>
     </dl>
-        <dt class = "col-sm-2">
+    <dl class="row">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.HeureFin)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.HeureFin)
-        </dd>
-    </dl>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Seances)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seances)
         </dd>
     </dl>
 </div>
