--- a/Views/Film/Create.cshtml
+++ b/Views/Film/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="View">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -21,7 +21,7 @@
 
             <div class="form-group">
                 <label asp-for="Annee" class="control-label"></label>
-                <input asp-for="Annee" class="form-control" />
+                <input type="date" asp-for="Annee" class="form-control" />
                 <span asp-validation-for="Annee" class="text-danger"></span>
             </div>
 
@@ -29,12 +29,6 @@
                 <label asp-for="Genre" class="control-label"></label>
                 <input asp-for="Genre" class="form-control" />
                 <span asp-validation-for="Genre" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Seances" class="control-label"></label>
-                <input asp-for="Seances" class="form-control" />
-                <span asp-validation-for="Seances" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
