--- a/Views/Film/Delete.cshtml
+++ b/Views/Film/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Confirmer la suppression</h3>
 <div>
-    <h4>ReservationCinema.Models.Film</h4>
+    <h4>Film</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -32,14 +32,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre)
-        </dd>
-    </dl>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Seances)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seances)
         </dd>
     </dl>
     <form asp-action="Delete">
