--- a/Views/Film/Details.cshtml
+++ b/Views/Film/Details.cshtml
@@ -17,6 +17,7 @@
             @Html.DisplayFor(model => model.Titre)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Annee)
         </dt>
@@ -24,18 +25,12 @@
             @Html.DisplayFor(model => model.Annee)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Genre)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre)
-        </dd>
-    </dl>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Seances)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seances)
         </dd>
     </dl>
 </div>
