--- a/Views/Horaire/Create.cshtml
+++ b/Views/Horaire/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="View">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -25,11 +25,6 @@
                 <span asp-validation-for="HeureFin" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="Seances" class="control-label"></label>
-                <input asp-for="Seances" class="form-control" />
-                <span asp-validation-for="Seances" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
