--- a/Views/Salle/Details.cshtml
+++ b/Views/Salle/Details.cshtml
@@ -17,6 +17,7 @@
             @Html.DisplayFor(model => model.Capacite)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateConstr)
         </dt>
@@ -24,25 +25,12 @@
             @Html.DisplayFor(model => model.DateConstr)
         </dd>
     </dl>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CinemaId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CinemaId)
-        </dd>
-    </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cinema)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cinema)
-        </dd>
-    </dl>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Seances)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seances)
+            @Html.DisplayFor(model => model.Cinema.Nom)
         </dd>
     </dl>
 </div>
