--- a/Views/Salle/Edit.cshtml
+++ b/Views/Salle/Edit.cshtml
@@ -24,19 +24,9 @@
                 <span asp-validation-for="DateConstr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CinemaId" class="control-label"></label>
+                <label asp-for="CinemaId" class="control-label">Cinema</label>
                 <select asp-for="CinemaId" class="form-control" asp-items="ViewBag.Cinemas"></select>
                 <span asp-validation-for="CinemaId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Cinema" class="control-label"></label>
-                <input asp-for="Cinema" class="form-control" />
-                <span asp-validation-for="Cinema" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Seances" class="control-label"></label>
-                <input asp-for="Seances" class="form-control" />
-                <span asp-validation-for="Seances" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
