--- a/Views/Seance/Details.cshtml
+++ b/Views/Seance/Details.cshtml
@@ -17,46 +17,28 @@
             @Html.DisplayFor(model => model.Tarif)
         </dd>
     </dl>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FilmId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FilmId)
-        </dd>
-    </dl>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraireId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoraireId)
-        </dd>
-    </dl>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SalleId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SalleId)
-        </dd>
-    </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Film)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Film)
+            @Html.DisplayFor(model => model.Film.Titre)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Horaire)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Horaire)
+            @Html.DisplayFor(model => model.Horaire.HeureDebut)
         </dd>
     </dl>
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Salle)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Salle)
+            @Html.DisplayFor(model => model.Salle.Capacite)
         </dd>
     </dl>
 </div>
