--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,6 +23,9 @@
                                 <p class="card-text"><strong>Ville :</strong> @cinema.Ville</p>
                                 <p class="card-text"><strong>Rue :</strong> @cinema.Rue</p>
                                 <p class="card-text"><strong>Numéro :</strong> @cinema.Numero</p>
+
+                                <!-- bouton -> CinemaDetails -->
+                                <a href="/cinema/Details/@cinema.Id" class="btn btn-primary">Voir Détails</a>
                             </div>
                         </div>
                     </div>
